# ApartmentListingScraper

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  build_page.py  data_overview.md  db.py  descriptions_sd_mme3gkwe24aa933915.csv  descriptions_sd_mme3w7li1z5y9k050f.csv  extraction_improvement_plan.md  facebookscraper.py  fetch.py  ingest_records.py  instructions.rtf  listings.db  listings_export.csv  main.py  marketplace_snapshot_sd_mm9su0lo1gqztwyq0d.json  marketplace_snapshot_sd_mma7m5gcneld72bxf.json  marketplace_snapshot_sd_mmb3jfln1c0o2fgbs3.json  phase0_step4_test.db  plan.md  pyproject.toml  requirements.txt  research.md  review.md  scrape.py  scrape_download.py  snapshot_history.jsonl
docs/: BRIGHTDATA_API_KEY_SETUP.md  SETUP.md  index.html
plan/: config_schema.toml  extraction-schema.md  extraction_plan.md  features.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  plan.md  reference.md
scripts/: build_page.py  claude_extraction_prompt.py  export_listings_csv.py  extract_listing_prototype.py  extract_new.py  ingest_records.py  run_claude_on_db_sample.py  run_extraction_initiate.py  run_extraction_pipeline.py  run_extraction_process.py  run_pipeline.py  scrape.py  scrape_download.py  snapshot_descriptions_to_csv.py  verify_phase0_step4.py
snapshots/: marketplace_snapshot_sd_mme3gkwe24aa933915.json  marketplace_snapshot_sd_mme3w7li1z5y9k050f.json  marketplace_snapshot_sd_mmedyb72qkyomo66l.json  marketplace_snapshot_sd_mmeib2mspbagke4ok.json  marketplace_snapshot_sd_mmeibh5712rjefvt3d.json  (+1 more)
uvrental/: db.py  (+13 more)
(+10 files in other folders)
